--- a/style.css
+++ b/style.css
@@ -3,6 +3,19 @@
     padding: 0;
 }
 
+.progres-bar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 8px;
+    background: #fff;
+    z-index: 999;
+    animation-name: fill-progress;
+    animation-timing-function: linear;
+    animation-timeline: scroll();
+}
+
 body {
     margin: 0;
     min-height: 100vh;
@@ -13,21 +26,6 @@ body {
     color: #fff;
     /* display: flex;
     justify-content: center;  */
-}
-
-/* Анімація */
-@keyframes gradientMove {
-    0% {
-        background-position: 0% 50%;
-    }
-
-    50% {
-        background-position: 100% 50%;
-    }
-
-    100% {
-        background-position: 0% 50%;
-    }
 }
 
 .header-box {
@@ -42,7 +40,7 @@ body {
     width: 100%;
     max-width: 1432px;
     height: 69px;
-    top: 40px;
+    top: 35px;
     margin: 0 40px 40px;
     position: fixed;
     background-color: rgba(255, 255, 255, 0.4);
@@ -212,7 +210,7 @@ nav ul {
 
 .info p {
     font-size: 20px;
-    letter-spacing: 3%;
+    letter-spacing: 1px;
     font-weight: 300;
     margin: 10px 50px;
     width: 330px;
@@ -295,5 +293,28 @@ nav ul {
     .box-header-buttons {
         width: 400px;
         font-weight: 500;
+    }
+
+    .main-container h2 {
+        font-size: 30px;
+    }
+
+    .main-container {
+        width: 530px;
+        padding: 5px 30px 90px
+    }
+
+    .info h4 {
+        font-size: 20px;
+    }
+
+    .info-title {
+        gap: 15px;
+        margin: 10px 0;
+    }
+
+    .info p {
+        margin: 10px 45px;
+        font-size: 15px;
     }
 }
