--- a/style.css
+++ b/style.css
@@ -102,6 +102,55 @@ nav ul {
     padding: 17px;
 }
 
+.burger {
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
+    gap: 5px;
+}
+
+.burger span {
+    width: 25px;
+    height: 3px;
+    background: #fff;
+    border-radius: 2px;
+    top: -40px;
+    right: 50px;
+    position: relative;
+}
+
+/* Адаптивне меню */
+@media screen and (max-width: 768px) {
+    #menu-box {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 10px;
+    }
+
+    .burger {
+        display: flex;
+        margin-left: auto;
+    }
+
+    #nav-menu {
+        display: none;
+        width: 100%;
+    }
+
+    #nav-menu.active {
+        display: block;
+    }
+
+    #nav-menu ul {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    #nav-menu ul li {
+        margin: 10px 0;
+    }
+}
+
 .box-header-h1-content {
     top: 209px;
     position: relative;
@@ -317,4 +366,42 @@ nav ul {
         margin: 10px 45px;
         font-size: 15px;
     }
+}
+
+@media (max-width: 820px) {
+    .header-img-statistics img {
+        left: 357px;
+        width: 200px;
+    }
+
+    #hr-header {
+        width: 550px;
+    }
+
+    #hr-header-2 {
+        width: 550px;
+    }
+
+    .box-header-h1-content {
+        top: 200px;
+        position: relative;
+        margin: 0px 70px;
+    }
+
+    .box-header-buttons {
+        width: 300px;
+        font-weight: 500;
+    }
+
+    .header-button a {
+        width: 146px;
+        font-size: 13px;
+    }
+#menu-box {
+    width: 100%;
+    margin: 0;
+    border-radius: 0;
+    top: 0;
+}
+
 }
