--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
     color: #fff;
     /* display: flex;
     justify-content: center;  */
+    overflow-x: hidden;
 }
 
 .header-box {
@@ -34,6 +35,7 @@ body {
     background-image: url(./images/header-img-bg.png);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
 }
 
 #menu-box {
@@ -120,36 +122,9 @@ nav ul {
 }
 
 /* Адаптивне меню */
-@media screen and (max-width: 768px) {
-    #menu-box {
-        flex-direction: column;
-        align-items: flex-start;
-        padding: 10px;
-    }
+/* @media screen and (max-width: 860px) {
 
-    .burger {
-        display: flex;
-        margin-left: auto;
-    }
-
-    #nav-menu {
-        display: none;
-        width: 100%;
-    }
-
-    #nav-menu.active {
-        display: block;
-    }
-
-    #nav-menu ul {
-        flex-direction: column;
-        gap: 10px;
-    }
-
-    #nav-menu ul li {
-        margin: 10px 0;
-    }
-}
+} */
 
 .box-header-h1-content {
     top: 209px;
@@ -240,6 +215,7 @@ nav ul {
     margin-top: 79px;
     margin-bottom: 79px;
     border-radius: 20px;
+    backdrop-filter: blur(2px);
     /* display: flex; */
     /* justify-items: center; */
 }
@@ -270,6 +246,14 @@ nav ul {
     align-items: center;
     gap: 20px;
     margin: 25px 0;
+}
+
+#decoration-1 {
+    width: 500px;
+    position: absolute;
+    right: 20px;
+    top: 1000px;
+    z-index: -1;
 }
 
 @media (max-width: 1400px) {
@@ -366,6 +350,10 @@ nav ul {
         margin: 10px 45px;
         font-size: 15px;
     }
+
+    #decoration-1 {
+        width: 350px;
+    }
 }
 
 @media (max-width: 820px) {
@@ -397,11 +385,145 @@ nav ul {
         width: 146px;
         font-size: 13px;
     }
-#menu-box {
-    width: 100%;
-    margin: 0;
-    border-radius: 0;
-    top: 0;
+
+    #menu-box {
+        width: 100%;
+        margin: 0;
+        border-radius: 0;
+        top: 0;
+    }
+
+    #decoration-1 {
+        width: 300px;
+        right: -10px;
+    }
+
 }
 
+@media (max-width: 860px) {
+    #hr-header {
+        width: 425px;
+    }
+
+    #hr-header-2 {
+        width: 425px;
+    }
+
+    .box-header-h1-content h1 {
+        font-size: 34px;
+        line-height: 40px;
+        width: 300px;
+    }
+
+    p {
+        font-size: 12px;
+        line-height: 15px;
+        width: 194px;
+
+    }
+
+    .box-header-h1-content h1 {
+        margin-bottom: -30px;
+    }
+
+    .header-button a {
+        width: 115px;
+        font-size: 10px;
+        height: 40px;
+    }
+
+    .box-header-buttons {
+        width: 250px;
+        font-weight: 600;
+    }
+
+    .header-img-statistics img {
+        left: 280px;
+        width: 150px;
+    }
+
+    #decoration-1 {
+        /* width: 300px; */
+        right: 0px;
+    }
+
+    #menu-box {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 10px;
+    }
+
+    .burger {
+        display: flex;
+        margin-left: auto;
+    }
+
+    #nav-menu {
+        display: none;
+        width: 100%;
+    }
+
+    #nav-menu.active {
+        display: block;
+        background: rgba(255, 255, 255, 0.4);
+        margin: 10px;
+        width: 400px;
+        border: 1px solid #fff;
+        border-radius: 2px;
+        font-weight: 500;
+    }
+
+    #nav-menu ul {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    #nav-menu ul li {
+        margin: 10px 0;
+    }
+
+    .burger {
+        position: relative;
+        left: 10px;
+    }
+}
+
+@media (max-width: 630px) {
+    .main-container {
+        width: 450px;
+    }
+
+    .main-container h2 {
+        font-size: 20px;
+    }
+
+    .info h4 {
+        font-size: 15px;
+    }
+
+    .info p {
+        font-size: 12px;
+        width: 280px;
+    }
+
+    .info-title img {
+        width: 25px;
+    }
+}
+
+@media (max-width: 515px) {
+    .main-container {
+        width: 300px;
+    }
+    #hr-header {
+        width: 325px;
+    }
+    #hr-header-2 {
+        width: 325px;
+    }
+        .header-img-statistics img {
+        left: 35px;
+        width: 250px;
+        top: 425px;
+    }
 }
