--- a/style.css
+++ b/style.css
@@ -258,16 +258,28 @@ nav ul {
     z-index: -1;
 }
 
+#decoration-2 {
+    width: 500px;
+    position: absolute;
+    left: 20px;
+    top: 2300px;
+    z-index: -1;
+}
+
 #accordion {
     background: #00000000;
 }
+
 #accordion h6 {
     color: #fff;
 }
+
 .card {
     color: #fff;
-    background-color: rgb(67 67 67 / 15%);;
+    background-color: rgb(67 67 67 / 15%);
+    ;
 }
+
 .card h6 {
     color: #fff;
 
@@ -369,6 +381,10 @@ nav ul {
     }
 
     #decoration-1 {
+        width: 350px;
+    }
+
+    #decoration-2 {
         width: 350px;
     }
 }
@@ -532,6 +548,9 @@ nav ul {
         width: 25px;
     }
 
+    #decoration-2 {
+        width: 250px;
+    }
 }
 
 @media (max-width: 515px) {
