--- a/style.css
+++ b/style.css
@@ -20,8 +20,8 @@ body {
     margin: 0;
     min-height: 100vh;
     background: linear-gradient(-45deg, #002346, #3B462C, #002346, #3B462C, #002346);
-    background-size: 400% 400%;
-    animation: gradientMove 30s ease infinite;
+    background-size: 200% 200%;
+    animation: gradientMove 10s ease infinite;
     font-family: "Montserrat", sans-serif;
     color: #fff;
     /* display: flex;
@@ -83,13 +83,14 @@ body {
 
 #menu-box a {
     text-decoration: none;
-    color: #fff;
+    color: #000;
     transition: 0.3s;
+    font-weight: 400;
 }
 
 #menu-box a:hover {
     color: #fff;
-    font-weight: 500;
+    font-weight: 400;
     text-shadow: 0 2px 10px #ffffff54;
 }
 
@@ -102,7 +103,8 @@ body {
 #box-logo a {
     text-decoration: none;
     font-weight: regular;
-    color: #fff;
+    color: #000;
+    font-weight: 500;
 }
 
 nav ul {
@@ -278,7 +280,7 @@ nav ul {
     min-height: 1000px;
     height: auto;
     background-image: linear-gradient(45deg, #808183, #E4E5E9);
-    background-size: 400% 400%;
+    background-size: 100% 100%;
     /* background: #E4E5E9; */
     padding: 100px;
     color: #000;
