--- a/style.css
+++ b/style.css
@@ -291,6 +291,7 @@ section {
     max-width: 800px;
     width: auto;
     margin: 0 auto;
+    margin-top: 200px;
 }
 
 section h2 {
@@ -336,6 +337,11 @@ section h2 {
 
 .card-header {
     background: #ffffff00;
+}
+
+#aboutBank h6, h5, h4 {
+    margin: 30px 0;
+    font-weight: 600;
 }
 
 @media (max-width: 1400px) {
@@ -555,7 +561,7 @@ section h2 {
 
     #nav-menu.active {
         display: block;
-        background: rgb(0 0 0 / 70%);
+        background: rgba(255, 255, 255, 0.7);
         margin: 10px;
         width: 400px;
         border: 1px solid #fff;
