--- a/style.css
+++ b/style.css
@@ -152,10 +152,10 @@ nav ul {
     transition: 0.3s;
 }
 
-.box-header-h1-content h1:hover {
-    /* width: 690px; */
+/* .box-header-h1-content h1:hover {
+    width: 690px;
     font-size: 66px;
-}
+} */
 
 .box-header-h1-content p {
     font-size: 24px;
@@ -166,10 +166,10 @@ nav ul {
     transition: 0.3s;
 }
 
-.box-header-h1-content p:hover {
+/* .box-header-h1-content p:hover {
     font-size: 25px;
     width: 450px;
-}
+} */
 
 #hr-header {
     width: 1080px;
@@ -205,9 +205,9 @@ nav ul {
     box-shadow: 0 5px 10px #ffffff44;
 }
 
-.header-button a:hover {
+/* .header-button a:hover {
     width: 300px;
-}
+} */
 
 .header-button a:hover {
     background-color: #ffffff6e;
@@ -282,7 +282,7 @@ nav ul {
     background-image: linear-gradient(45deg, #808183, #E4E5E9);
     background-size: 100% 100%;
     /* background: #E4E5E9; */
-    padding: 100px;
+    padding: 50px 100px 100px;
     color: #000;
     animation: gradientMove 5s ease infinite;
 }
@@ -291,7 +291,7 @@ section {
     max-width: 800px;
     width: auto;
     margin: 0 auto;
-    margin-top: 200px;
+    /* margin-top: 200px; */
 }
 
 section h2 {
