--- a/style.css
+++ b/style.css
@@ -367,10 +367,53 @@ h4 {
 #contacts p {
     margin-top: 50px;
 }
+
 #map {
-  width: 100%;
-  max-width: 800px;
-  height: 400px;
+    width: 100%;
+    max-width: 800px;
+    height: 400px;
+}
+
+.header-box-2 {
+    background-image: url(./images/contact.png);
+    width: 100%;
+    height: 600px;
+}
+
+.header-box-5 {
+    background-image: url(./images/for-tarif.png);
+    width: 100%;
+    height: 880px;
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.header-box-5 h2 {
+    width: auto;
+    max-width: 700px;
+    max-height: 140px;
+    height: auto;
+    font-size: 64px;
+    line-height: 60px;
+}
+
+.header-box-5 p {
+    width: auto;
+    max-width: 330px;
+    max-height: 140px;
+    margin-top: 20px;
+    height: auto;
+    font-size: 24px;
+    font-weight: 300;
+    line-height: 30px;
+    position: relative;
+    right: 180px;
+}
+
+#tarif h3 {
+    text-align: center;
 }
 
 @media (max-width: 1400px) {
