--- a/style.css
+++ b/style.css
@@ -218,6 +218,7 @@ nav ul {
 
 #headButt {
     background: #00000000;
+    border: 1px solid;
 }
 
 #headButt a {
@@ -234,7 +235,8 @@ nav ul {
 }
 
 .main-container {
-    width: 800px;
+    width: auto;
+    max-width: 950px;
     height: auto;
     background-color: rgba(255, 255, 255, 0.50);
     margin: 0 auto;
@@ -280,13 +282,15 @@ nav ul {
     max-width: 950px;
     min-height: 1000px;
     height: auto;
-    margin: 0 auto;
+    margin: 100px auto;
     background-image: linear-gradient(45deg, #808183, #E4E5E9);
     background-size: 100% 100%;
-    /* background: #E4E5E9; */
     padding: 50px 100px 100px;
     color: #000;
     animation: gradientMove 5s ease infinite;
+    border-radius: 5px;
+    border: 1px solid #fff;
+    box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
 }
 
 section {
@@ -374,16 +378,118 @@ h4 {
     height: 400px;
 }
 
+/* 
 .header-box-2 {
     background-image: url(./images/contact.png);
     width: 100%;
     height: 600px;
+} */
+
+.footer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    background-color: #dddddd80;
+    color: #222;
+    padding: 40px 20px;
+    font-family: 'Segoe UI', sans-serif;
+    gap: 30px;
+    box-shadow: inset 0 4px 4px rgba(0, 0, 0, 0.3);
+}
+
+.footer-column {
+    flex: 1 1 250px;
+    min-width: 220px;
+    max-width: 300px;
+}
+
+.footer-column h4 {
+    font-size: 18px;
+    margin-bottom: 10px;
+    color: #000000;
+}
+
+.footer-column h6 {
+    font-size: 16px;
+    margin: 15px 0 5px;
+    color: #e0e1dd;
+}
+
+.footer-column ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.footer-column ul li {
+    margin-bottom: 6px;
+    font-size: 14px;
+    color: #d9d9d9;
+    transition: color 0.3s;
+}
+
+.footer-column ul li:hover {
+    color: #fca311;
+    cursor: pointer;
+}
+
+.footer-column p {
+    font-size: 14px;
+    line-height: 1.6;
+}
+
+footer ul li a {
+    text-decoration: none;
+    color: #555;
+    transition: 0.2s;
+}
+
+footer ul li a:hover {
+    color: #1f0091;
 }
 
 
+@media (max-width: 768px) {
+    .footer {
+        flex-direction: column;
+        align-items: flex-start;
+    }
 
+    .footer-column {
+        width: 100%;
+    }
+}
 
+.icon-link {
+  display: inline-flex;
+  align-items: center;
+  gap: 8px;
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
 
+.icon-link:hover {
+    color: #1f0091;
+}
+
+#calendar-section {
+  /* background-color: #f4f4f49c; */
+  padding: 20px;
+  margin: 20px 0;
+  border-radius: 10px;
+  text-align: center;
+}
+
+#calendar {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+#dayTypeMessage {
+  font-size: 16px;
+}
 
 
 @media (max-width: 1400px) {
