--- a/style-dark.css
+++ b/style-dark.css
@@ -19,7 +19,7 @@
 body {
     margin: 0;
     min-height: 100vh;
-    background: linear-gradient(-45deg, #002346, #3B462C, #002346, #3B462C, #002346);
+    background: linear-gradient(-45deg, #001224, #4F4F4F, #001224, #4F4F4F, #001224);
     background-size: 200% 200%;
     animation: gradientMove 10s ease infinite;
     font-family: "Montserrat", sans-serif;
@@ -144,22 +144,19 @@ nav ul {
 }
 
 .box-header-h1-content h1 {
+    color: #fff;
     font-size: 64px;
-    width: 680px;
+    width: 815px;
     height: 175px;
     line-height: 65px;
     margin-top: 58px;
     transition: 0.3s;
 }
 
-/* .box-header-h1-content h1:hover {
-    width: 690px;
-    font-size: 66px;
-} */
-
 .box-header-h1-content p {
+    color: #fff;
     font-size: 24px;
-    width: 400px;
+    width: 406px;
     height: 80px;
     line-height: 30px;
     font-weight: 300;
@@ -172,11 +169,13 @@ nav ul {
 } */
 
 #hr-header {
-    width: 1080px;
+    width: 800px;
+    color: #fff;
 }
 
 #hr-header-2 {
-    width: 1080px;
+    color: #fff;
+    width: 800px;
     position: relative;
     top: 61px;
 }
@@ -217,8 +216,8 @@ nav ul {
 }
 
 #headButt {
-    background: #00000000;
-    border: 1px solid;
+    /* background: #00000000; */
+    border: 1px solid #fff;
 }
 
 #headButt a {
@@ -238,7 +237,8 @@ nav ul {
     width: auto;
     max-width: 950px;
     height: auto;
-    background-color: rgba(255, 255, 255, 0.50);
+    background-color: #000000ab;
+    ;
     margin: 0 auto;
     padding: 46px 50px 100px;
     margin-top: 79px;
@@ -283,10 +283,10 @@ nav ul {
     min-height: 1000px;
     height: auto;
     margin: 100px auto;
-    background-image: linear-gradient(45deg, #808183, #E4E5E9);
+    background-image: linear-gradient(100deg, #050e18, #272727);
     background-size: 100% 100%;
     padding: 50px 100px 100px;
-    color: #000;
+    color: #ffffff;
     animation: gradientMove 5s ease infinite;
     border-radius: 5px;
     border: 1px solid #fff;
@@ -448,11 +448,77 @@ footer ul li a:hover {
     color: #1f0091;
 }
 
+table {
+    box-shadow: 0 10px 20px #ffffff1f;
+}
+
+#calendar th,
+#calendar td {
+    border: 1px solid #ffffff7c;
+    width: 14.28%;
+    height: 80px;
+    text-align: center;
+    vertical-align: middle;
+    font-family: Arial, sans-serif;
+    font-size: 18px;
+    background-color: #c9c9c9;
+}
+
+#calendar th {
+    background-color: #191c278d;
+    border: none;
+}
+
+#calendar td {
+    color: #333;
+}
+
+.footer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    background-color: #00000080;
+    color: #ababab;
+    padding: 40px 20px;
+    font-family: 'Segoe UI', sans-serif;
+    gap: 30px;
+    box-shadow: inset 0 4px 4px rgb(255 255 255 / 30%);
+}
+
+footer ul li a:hover {
+    color: #910500;
+}
+
+footer ul li a {
+    color: #8d8d8d;
+}
+
+.footer-column h4 {
+    color: #fff;
+}
+
+.icon-link {
+    display: inline-flex;
+    align-items: center;
+    gap: 8px;
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.icon-link {
+    display: inline-flex;
+    align-items: center;
+    gap: 8px;
+    color: #8d8d8d !important;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
 
 @media (max-width: 768px) {
     .footer {
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
     }
 
     .footer-column {
@@ -461,12 +527,12 @@ footer ul li a:hover {
 }
 
 .icon-link {
-  display: inline-flex;
-  align-items: center;
-  gap: 8px;
-  color: rgb(0, 0, 0);
-  text-decoration: none;
-  transition: color 0.3s ease;
+    display: inline-flex;
+    align-items: center;
+    gap: 8px;
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+    transition: color 0.3s ease;
 }
 
 .icon-link:hover {
@@ -474,21 +540,21 @@ footer ul li a:hover {
 }
 
 #calendar-section {
-  /* background-color: #f4f4f49c; */
-  padding: 20px;
-  margin: 20px 0;
-  border-radius: 10px;
-  text-align: center;
+    /* background-color: #f4f4f49c; */
+    padding: 20px;
+    margin: 20px 0;
+    border-radius: 10px;
+    text-align: center;
 }
 
 #calendar {
-  font-size: 18px;
-  font-weight: bold;
-  margin-bottom: 10px;
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 10px;
 }
 
 #dayTypeMessage {
-  font-size: 16px;
+    font-size: 16px;
 }
 
 
