--- a/style-dark.css
+++ b/style-dark.css
@@ -19,7 +19,7 @@
 body {
     margin: 0;
     min-height: 100vh;
-    background: linear-gradient(-45deg, #001224, #4F4F4F, #001224, #4F4F4F, #001224);
+    background: linear-gradient(-45deg, #0A0F1C, #1C2617, #0A0F1C, #1C2617, #0A0F1C);
     background-size: 200% 200%;
     animation: gradientMove 10s ease infinite;
     font-family: "Montserrat", sans-serif;
@@ -114,6 +114,21 @@ nav ul {
     margin: 0;
     padding: 17px;
 }
+
+#nav-menu {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#nav-menu ul {
+    display: flex;
+    gap: 20px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
 
 .burger {
     display: none;
@@ -283,7 +298,8 @@ nav ul {
     min-height: 1000px;
     height: auto;
     margin: 100px auto;
-    background-image: linear-gradient(100deg, #050e18, #272727);
+    background-image: linear-gradient(45deg, #3A3B3D, #5C5D61);
+
     background-size: 100% 100%;
     padding: 50px 100px 100px;
     color: #ffffff;
@@ -557,6 +573,46 @@ footer ul li a {
     font-size: 16px;
 }
 
+.switch {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 60px;
+    height: 34px;
+    margin: 0 20px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background-color: #636363;
+    transition: 0.4s;
+    border-radius: 34px;
+    cursor: pointer;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    transition: 0.4s;
+    border-radius: 50%;
+}
+
+input:checked+.slider:before {
+    transform: translateX(26px);
+}
 
 @media (max-width: 1400px) {
     #menu-box {
