--- a/style-dark.css
+++ b/style-dark.css
@@ -47,7 +47,7 @@ body {
     top: 15px;
     margin: 0 40px 40px;
     position: fixed;
-    background-color: rgba(255, 255, 255, 0.4);
+    background-color: rgba(0, 0, 0, 0.4);
     border-radius: 20px;
     display: flex;
     justify-content: space-between;
@@ -55,7 +55,7 @@ body {
     z-index: 1;
     font-weight: 200;
     backdrop-filter: blur(10px);
-    box-shadow: 0 1px 0 #a9a9a9;
+    box-shadow: 0 1px 0 #a9a9a955;
 }
 
 .header-img-statistics img {
@@ -83,15 +83,14 @@ body {
 
 #menu-box a {
     text-decoration: none;
-    color: #000;
+    color: #ffffff;
     transition: 0.3s;
     font-weight: 400;
 }
 
 #menu-box a:hover {
-    color: #fff;
+    color: #727272;
     font-weight: 400;
-    text-shadow: 0 2px 10px #ffffff54;
 }
 
 #box-logo {
@@ -103,7 +102,7 @@ body {
 #box-logo a {
     text-decoration: none;
     font-weight: regular;
-    color: #000;
+    color: #ffffff;
     font-weight: 500;
 }
 
