--- a/style-dark.css
+++ b/style-dark.css
@@ -574,7 +574,7 @@ footer ul li a {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 60px;
+    width: 100px;
     height: 34px;
     margin: 0 20px;
 }
@@ -589,7 +589,7 @@ footer ul li a {
     position: relative;
     width: 100%;
     height: 100%;
-    background-color: #636363;
+    background-color: #373737;
     transition: 0.4s;
     border-radius: 34px;
     cursor: pointer;
@@ -602,13 +602,19 @@ footer ul li a {
     width: 26px;
     left: 4px;
     bottom: 4px;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     transition: 0.4s;
     border-radius: 50%;
 }
 
 input:checked+.slider:before {
     transform: translateX(26px);
+}
+
+#img1 {
+    position: relative;
+    right: 10px;
+    width: 35px;
 }
 
 @media (max-width: 1400px) {
@@ -833,7 +839,7 @@ input:checked+.slider:before {
 
     #nav-menu.active {
         display: block;
-        background: rgba(255, 255, 255, 0.7);
+        background: rgba(0, 0, 0, 0.7);
         margin: 10px;
         width: 400px;
         border: 1px solid #fff;
