--- a/style-light.css
+++ b/style-light.css
@@ -510,7 +510,7 @@ footer ul li a:hover {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 60px;
+    width: 100px;
     height: 34px;
     margin: 0 20px;
 }
@@ -546,6 +546,13 @@ footer ul li a:hover {
 input:checked+.slider:before {
     transform: translateX(26px);
 }
+
+#img1 {
+    position: relative;
+    right: 10px;
+    width: 35px;
+}
+
 
 @media (max-width: 1400px) {
     #menu-box {
