--- a/style-light.css
+++ b/style-light.css
@@ -553,6 +553,10 @@ input:checked+.slider:before {
     width: 35px;
 }
 
+#demo {
+    margin-top: 100px;
+}
+
 
 @media (max-width: 1400px) {
     #menu-box {
