--- a/style-dark.css
+++ b/style-dark.css
@@ -461,13 +461,9 @@ footer ul li a:hover {
     color: #1f0091;
 }
 
-table {
-    box-shadow: 0 10px 20px #ffffff1f;
-}
-
 #calendar th,
 #calendar td {
-    border: 1px solid #ffffff7c;
+    border: 1px solid #8e8e8e7c !important;
     width: 14.28%;
     height: 80px;
     text-align: center;
@@ -478,12 +474,13 @@ table {
 }
 
 #calendar th {
-    background-color: #191c278d;
-    border: none;
+    background-color: #191c278d !important;
+    border: none !important;
 }
 
 #calendar td {
-    color: #333;
+    color: #a2a2a2;
+    background: #00000000;
 }
 
 .footer {
@@ -869,12 +866,12 @@ input:checked+.slider:before {
         font-weight: 700;
     }
 
-    .header-box-5 h2 {
+    .header-box-4 h2 {
         font-size: 40px !important;
         margin-left: 20px !important;
     }
 
-    .header-box-5 p {
+    .header-box-4 p {
         font-size: 18px !important;
         /* margin-left: 20px; */
         right: 0 !important;
@@ -1005,7 +1002,7 @@ input:checked+.slider:before {
         width: 275px;
     }
 
-    .header-box-5 p {
+    .header-box-4 p {
         margin-top: 40px !important;
     }
 }
@@ -1055,7 +1052,7 @@ input:checked+.slider:before {
         padding: 20px;
     }
 
-    .header-box-5 p {
+    .header-box-4 p {
         margin-top: 80px !important;
     }
 }
