--- a/style-dark.css
+++ b/style-dark.css
@@ -42,13 +42,13 @@ body {
 
 #menu-box {
     width: 100%;
-    max-width: 1432px;
+    /* max-width: 1432px; */
     height: 69px;
-    top: 15px;
-    margin: 0 40px 40px;
+    top: 0;
+    /* margin: 0 40px 40px; */
     position: fixed;
     background-color: rgba(0, 0, 0, 0.4);
-    border-radius: 20px;
+    /* border-radius: 20px; */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -404,7 +404,7 @@ h4 {
     justify-content: space-between;
     background-color: #dddddd80;
     color: #222;
-    padding: 40px 20px;
+    padding: 60px 70px;
     font-family: 'Segoe UI', sans-serif;
     gap: 30px;
     box-shadow: inset 0 4px 4px rgba(0, 0, 0, 0.3);
@@ -554,7 +554,7 @@ footer ul li a {
     padding: 20px;
     margin: 20px 0;
     border-radius: 10px;
-    text-align: center;
+    /* text-align: center; */
 }
 
 #calendar {
@@ -618,14 +618,42 @@ input:checked+.slider:before {
     margin-top: 100px;
 }
 
+/* @media (max-width: 2500px) {
+    #menu-box {
+        height: 120px;
+    }
+
+    #hr-header,
+    #hr-header-2 {
+        width: 1500px;
+    }
+
+    .header-box {
+        height: 1290px;
+    }
+
+    .box-header-h1-content h1 {
+        font-size: 74px;
+    }
+
+    .box-header-h1-content p {
+        font-size: 34px;
+        width: 524px;
+    }
+    .box-header-buttons {
+        margin-top: 50px;
+        width: 600px;
+    } */
+/* } */
+
 @media (max-width: 1400px) {
     #menu-box {
         margin: 0;
     }
 
-    nav {
+    /* nav {
         margin-right: 80px;
-    }
+    } */
 
 
 
