--- a/style-light.css
+++ b/style-light.css
@@ -44,13 +44,13 @@ body {
 
 #menu-box {
     width: 100%;
-    max-width: 1432px;
+    /* max-width: 1432px; */
     height: 69px;
-    top: 15px;
-    margin: 0 40px 40px;
+    top: 0;
+    /* margin: 0 40px 40px; */
     position: fixed;
     background-color: rgba(255, 255, 255, 0.4);
-    border-radius: 20px;
+    /* border-radius: 20px; */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -382,7 +382,7 @@ h4 {
     justify-content: space-between;
     background-color: #dddddd80;
     color: #222;
-    padding: 40px 20px;
+    padding: 60px 70px;
     font-family: 'Segoe UI', sans-serif;
     gap: 30px;
     box-shadow: inset 0 4px 4px rgba(0, 0, 0, 0.3);
@@ -469,7 +469,7 @@ footer ul li a:hover {
     padding: 20px;
     margin: 20px 0;
     border-radius: 10px;
-    text-align: center;
+    /* text-align: center; */
 }
 
 #calendar {
